fix: corrigir fundo infinito da rolagem no PWA mobile - alterar theme-color de rosa para lavender (#faf5ff) - atualizar manifest.json com background e theme color corretos - adicionar CSS específico para garantir consistência no PWA - suporte para iOS Safari viewport background

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Transforme a espera em conexão especial. Crie contagens regressivas emocionais e compartilhe momentos únicos com quem você ama.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ec4899",
+  "background_color": "#faf5ff",
+  "theme_color": "#faf5ff",
   "orientation": "portrait-primary",
   "icons": [
     {
